@@ -1,3 +1,3 @@
 <p>
-  product works!
+  product works! {{izpis}}
 </p>
