@@ -1,4 +1,5 @@
 import { Component, OnInit } from '@angular/core';
+import { MojServiceService } from '../moj-service.service';
 
 @Component({
   selector: 'app-product',
@@ -7,9 +8,14 @@ import { Component, OnInit } from '@angular/core';
 })
 export class ProductComponent implements OnInit {
 
-  constructor() { }
+  constructor(private new2Service: MojServiceService) { }
 
+  izpis;
   ngOnInit() {
+    console.log(this.new2Service.objekt);
+    this.izpis = this.new2Service.objekt;
+
+    console.log(this.new2Service.variabla);
   }
 
 }
